Render for Phil

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -42,7 +42,7 @@ infections2022 <- 1.3 * 1e6
 coverage2022 <- 76
 ```
 
-## Background
+## Background {#background}
 
 <!-- What is HIV -->
 HIV is a retrovirus which infects humans.
@@ -51,7 +51,7 @@ HIV primarily attacks a type of white blood cell vital for the function of the i
 As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or *Pneumocystis* pneumonias.
 
 <!-- HIV is a big problem, plus how is it transmitted -->
-The first AIDS cases were reported in Los Angeles in the early 1980s.
+The first AIDS cases were reported in Los Angeles in the early 1980s [@gottlieb1981pneumocystis; @barre1983isolation].
 Since then, HIV has spread globally.
 Transmission occurs by exposure to specific bodily fluids of an infected person.
 The most common mode of transmission is via unprotected anal or vaginal sex, though transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
@@ -65,8 +65,8 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-Many groups have played pivotal roles in shaping the response, including local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
-The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
+Groups that have played pivotal roles in shaping the response include local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
+The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constituting the "largest commitment by a single nation to address a single disease in history" indicates the scale of the response [@pepfar2022].
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -75,16 +75,18 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68%. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. These two regions comprise sub-Saharan Africa.
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo].
+Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa.
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 ```
 
 <!-- The effort has translated into progress -->
-This combined effort has made a substantial impact on the course of the epidemic.
+A substantial impact has been made on the course of the epidemic.
 The number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \@ref(fig:overall-picture)).
-This success has been due to implementation of a range of HIV prevention and treatment options, the most significant of which I describe below.
+This progress comes due to implementation HIV prevention and treatment options.
+I descibe the most significant of these below.
 
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
 A person living with HIV who takes ART daily can live a full and healthy life.
@@ -104,12 +106,12 @@ Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are drugs which can be taken before and after exposure to prevent transmission.
 More costly than some other prevention options, they are primarily useful in high risk settings.
 
-It is important that progress which has been made is sustained.
-There remains some distance to go in ending AIDS as a public health threat.
+Though progress had been made, there remains much more to do.
 In 2022 there were `r custom_numbers_to_words(infections2022)` people newly infected with HIV and `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
-A shortfall in HIV funding [@economist2023triple], disruption to HIV services caused by the COVID-19 pandemic, and increasingly difficult to meet targets.
+Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
+Meeting these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding [@economist2023triple] requires renewed commitment.
 
-(ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from `aidsinfo.unaids.org`. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
+(ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
 
 ```{r naomi-continent, fig.cap="(ref:naomi-continent)"}
 knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
@@ -117,8 +119,8 @@ knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
 
 <!-- Prioritisation of interventions  -->
 For available resources to have the greatest impact, it is important that HIV interventions are prioritised.
-The precision public health paradigm [@khoury2016precision] extends the principles of precision medicine to public health, and aims to provide the right interventions to the right population, in the right place, at the right time.
-<!-- Methods for prevention prioritisation include geographic, demographic, key population services, risk screening, and individual-level risk characteristics. -->
+Under the precision public health paradigm, the right interventions should be provided to the right populations, in the right place, at the right time [@khoury2016precision].
+Some interventions might be orders of magnitude more impactful than others [@ord2013moral].
 
 <!-- Uneven burden in space -->
 Disease burden varies substantially across multiple spatial scales.
@@ -133,13 +135,15 @@ For example, adult HIV prevalence at the district municipality level in South Af
 <!-- Uneven burden across people -->
 In all countries and contexts, some groups of people are at much higher risk than others.
 Groups of people at increased risk of HIV infection are known as key populations (KPs).
-Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP).
+Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) [@stevens2022key].
 KPs are often marginalised, and face legal and social issues.
 In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
-For example, adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection in SSA [@risher2021age; @monod2023growing].
+For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing], but typically not considered a KP.
 
-## HIV surveillance \label{sec:surveillance}
+<!-- Practical methods for prevention prioritisation: geographic, demographic, key population services, risk screening, individual-level risk characteristics. -->
+
+## HIV surveillance {#surveillance}
 
 <!-- What is surveillance and how can it be used to meet these needs -->
 HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV/AIDS.
@@ -157,28 +161,33 @@ Planning, delivery, and evaluation of prevention programming relies on estimates
 * **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART, typically written as a percentage.
 Estimates of ART coverage play a direct role in the provision and target setting for treatment services.
 
-There are significant difficulties associated with obtaining reliable, timely, estimates of these indicators at an appropriate spatial resolution.
-Among them:
+<!-- Key data sources used to inform these indicators are: household surveys, programmatic data -->
+
+Obtaining reliable, timely, estimates of these indicators at an appropriate spatial resolution is challenging.
+Among the most significant difficulties are:
 
 1. **Data sparsity**
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
 For example, in many countries the last household survey conducted is several years out of date.
 4. **Missing data**
-Many KPs are difficult to reach, and do not appear on household survey sampling frames.
+The sampling frame may not correspond to the target population.
+For example, many KPs are difficult to reach, and may be ommited from sampling frames.
 Individuals included on the sampling frame may choose not to respond.
-Mismatch of the sampling frame to the target population, sampling error, and non-response can all be characterised as issues of missing data.
-Note that I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
+All surveys are subject to sampling error, as only a subset of the target population are sampled.
+Each of these issues can be characterised as being due to missing data.
+I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
 3. **Survey biases**
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
 When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
 4. **Denominators and demography**
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
-Accurately estimating these denominators is itself a challenging task [@tatem2017worldpop].
+Accurately estimating population denominators is itself a challenging task [@tatem2017worldpop].
 Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
 5. **Reliance on epidemiological parameters**
-Indicators often rely on estimates of epidemiological parameters obtained from cohort studies.
-Application of these parameters, which may not generalise to the setting of interest, is often coarse and without proper accounting for uncertainty.
+Indicators rely on estimates of epidemiological parameters obtained from cohort studies.
+These parameters may not generalise to the setting of interest.
+Further, they are typically applied coarsely, and without proper accounting for uncertainty.
 
 The above challenges make direct interpretation of the data often misleading.
 Careful statistical modelling is required to overcome these limitations.
