--- a/references.bib
+++ b/references.bib
@@ -1286,3 +1286,64 @@ doi = {10.1201/9781420072884-c30}
   publisher={Chapman and Hall/CRC}
 }
 
+@article{gottlieb1981pneumocystis,
+  title={Pneumocystis pneumonia—Los Angeles},
+  author={Gottlieb, Michael S and Schanker, Howard M and Fan, Peng Thim and Saxon, Andrew and Weisman, Joel D and Pozalski, Irving and others},
+  journal={Mmwr},
+  volume={30},
+  number={21},
+  pages={1--3},
+  year={1981}
+}
+
+@article{barre1983isolation,
+  title={Isolation of a T-lymphotropic retrovirus from a patient at risk for acquired immune deficiency syndrome (AIDS)},
+  author={Barr{\'e}-Sinoussi, Fran{\c{c}}oise and Chermann, Jean-Claude and Rey, Fran and Nugeyre, Marie Therese and Chamaret, Sophie and Gruest, Jacqueline and Dauguet, Charles and Axler-Blin, Charles and V{\'e}zinet-Brun, Fran{\c{c}}oise and Rouzioux, Christine and others},
+  journal={Science},
+  volume={220},
+  number={4599},
+  pages={868--871},
+  year={1983},
+  publisher={American Association for the Advancement of Science}
+}
+
+@misc{unaids2023aidsinfo,
+  title = {{AIDSinfo: Global data on HIV epidemiology and response}},
+  author={{UNAIDS}},
+  year={2023},
+  howpublished = {\url{https://aidsinfo.unaids.org/}},
+  note={Accessed: August 2023}
+}
+
+@article{stevens2022key,
+  title={Key population size, HIV prevalence, and ART coverage in sub-Saharan Africa: systematic collation and synthesis of survey data},
+  author={Stevens, Oliver and Sabin, Keith and Garcia, Sonia Arias and Anderson, Rebecca and Willis, Kalai and Abdul-Quader, Abu and McIntyre, Anne and Fearon, Elizabeth and Grard, Emilie and Stewart-Brown, Alice and others},
+  journal={medRxiv},
+  pages={2022--07},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@misc{measure2012sampling,
+  title={{Sampling and Household Listing Manual: Demographic and Health Surveys Methodology}},
+  author={{DHS}},
+  year={2012}
+}
+
+@article{dean2001detecting,
+  title={Detecting interaction between random region and fixed age effects in disease mapping},
+  author={Dean, CB and Ugarte, MD and Militino, AF},
+  journal={Biometrics},
+  volume={57},
+  number={1},
+  pages={197--202},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{rue2020comment,
+ author = {Rue, H{\aa}vard},
+ title = {Comment on R-INLA Discussion Group thread},
+ url = {https://groups.google.com/g/r-inla-discussion-group/c/l2fSYlbbJJM/m/8vUCjrO_BAAJ}},
+ year = {2020}
+}
