--- a/templates/template.tex
+++ b/templates/template.tex
@@ -211,11 +211,11 @@ $endif$
 \newcommand{\bv}{\mathbf{v}}
 \newcommand{\w}{\mathbf{w}}
 \newcommand{\x}{\mathbf{x}}
-\newcommand{\y}{\mathbf{y}}
+\newcommand{\y}{\boldsymbol{\mathbf{y}}}
 \newcommand{\z}{\mathbf{z}}
 \newcommand{\bb}{\mathbf{b}}
 \newcommand{\Hb}{\mathbf{H}}
-\newcommand{\bphi}{\bm{\phi}}
+\newcommand{\bphi}{\boldsymbol{\mathbf{\phi}}}
 \newcommand{\brho}{\bm{\rho}}
 \newcommand{\btheta}{\bm{\theta}}
 \newcommand{\bmeta}{\bm{\eta}}
