--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -31,12 +31,6 @@ knitr::opts_chunk$set(
 \markboth{Introduction}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-(ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used by the @ihme2019 vary depending on severity of the condition.
-
-```{r gbd, fig.cap="(ref:gbd)"}
-knitr::include_graphics("figures/introduction/gbd.png")
-```
-
 ```{r}
 custom_numbers_to_words <- function(number) {
   powers <- c(3, 6, 9, 12)
@@ -72,6 +66,12 @@ This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned first with real world questions and second with the means to answer them.
 It is Bayesian in that I arrive at conclusions based on data using probability models.
 
+(ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used by the @ihme2019 vary depending on severity of the condition.
+
+```{r gbd, fig.cap="(ref:gbd)"}
+knitr::include_graphics("figures/introduction/gbd.png")
+```
+
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
 The @ihme2019 found HIV to be the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older (Figure \@ref(fig:gbd)).
 Using statistics to quantify the epidemic is an important part of the public health response, and the path towards disease control and elimination.
@@ -83,7 +83,7 @@ While diverse, spatio-temporal data have distinctive commonalities.
 I draw on modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
-Each project in this thesis, as well as the thesis itself, is accompanied by $\textsc{R}$ code, hosted on GitHub.
+Each project in this thesis, as well as the thesis itself, is accompanied by R code, hosted on GitHub.
 
 ## Chapter overview
 
@@ -106,5 +106,5 @@ Further, I open the door to a new class of fast, flexible, and accurate Bayesian
 (ref:chapter-flowchart) The chapters in this thesis are structured to depend on each other. Dashed lines represents a recommended, but not required dependency. Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as they correspond to separable research projects.
 
 ```{r chapter-flowchart, fig.cap="(ref:chapter-flowchart)"}
-knitr::include_graphics("figures/introduction/chapter-flowchart.pdf")
+knitr::include_graphics("figures/introduction/chapter-flowchart.png")
 ```
