--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -34,15 +34,15 @@ Let $i \sim j$ if the areas $A_i$ and $A_j$ are adjacent or neighbouring.
 Adjacency is often defined by a shared border, though other choices are possible [@paciorek2013spatial].
 The Besag model [@besag1991bayesian] is an improper conditional auto-regressive (ICAR) model where the full conditional distribution of the $i$th spatial random effect is given by
 \begin{equation}
-    u_i \, | \, \bu_{-i} \sim \N \left(\frac{1}{n_{\delta i}} \sum_{j: j \sim i} u_j, \frac{1}{n_{\delta i}\tau_u}\right), \label{eq:besag}
+    u_i \, | \, \mathbf{u}_{-i} \sim \mathcal{N} \left(\frac{1}{n_{\delta i}} \sum_{j: j \sim i} u_j, \frac{1}{n_{\delta i}\tau_u}\right), \label{eq:besag}
 \end{equation}
-where $\delta i$ is the set of neighbours of $A_i$ with cardinality $n_{\delta i} = |\delta i|$ and $\bu_{-i}$ is the vector of spatial random effects with the $i$th entry removed.
+where $\delta i$ is the set of neighbours of $A_i$ with cardinality $n_{\delta i} = |\delta i|$ and $\mathbf{u}_{-i}$ is the vector of spatial random effects with the $i$th entry removed.
 The conditional mean of the random effect $u_i$ is the average of its neighbours $\{u_j\}_{j \sim i}$ and the precision $n_{\delta i}\tau_u$ is proportional to the number of neighbours $n_{\delta i}$.
 By Brook's lemma [@rue2005gaussian] the set of full conditionals of the Besag model are equivalent to the Gaussian Markov random field (GMRF) given by
 \begin{equation}
-    \bu \sim \mathcal{N}(\mathbf{0}, \tau_u^{-1} \bR^{-}), \label{eq:gmrf}
+    \mathbf{u} \sim \mathcal{N}(\mathbf{0}, \tau_u^{-1} \mathbf{R}^{-}), \label{eq:gmrf}
 \end{equation}
-where $\bR^{-}$ is the generalised inverse of the rank-deficient structure matrix $\bR$, so-called because it defines the structure of the precision matrix, with entries
+where $\mathbf{R}^{-}$ is the generalised inverse of the rank-deficient structure matrix $\mathbf{R}$, so-called because it defines the structure of the precision matrix, with entries
 \begin{equation}
     R_{ij} =
     \begin{cases}
@@ -51,18 +51,18 @@ where $\bR^{-}$ is the generalised inverse of the rank-deficient structure matri
         0, & \text{otherwise.}
     \end{cases}
 \end{equation}
-The Markov property arises due to the conditional independence structure $p(u_i \, | \, \bu_{-i}) = p(u_i \, | \, \bu_{\delta i})$ whereby each area only depends on its neighbours.
-This is reflected in the sparsity of $\bR$ such that $u_i \perp u_j \, | \, \bu_{-ij}$ if and only if $R_{ij} = 0$.
-The structure matrix $\bR$ may also be expressed as the Laplacian of the adjacency graph $\mathcal{G} = (\mathcal{V}, \mathcal{E})$ with vertices $v \in \mathcal{V}$ corresponding to each area and edges $e \in \mathcal{E}$ between vertices $i$ and $j$ when $i \sim j$.
+The Markov property arises due to the conditional independence structure $p(u_i \, | \, \mathbf{u}_{-i}) = p(u_i \, | \, \mathbf{u}_{\delta i})$ whereby each area only depends on its neighbours.
+This is reflected in the sparsity of $\mathbf{R}$ such that $u_i \perp u_j \, | \, \mathbf{u}_{-ij}$ if and only if $R_{ij} = 0$.
+The structure matrix $\mathbf{R}$ may also be expressed as the Laplacian of the adjacency graph $\mathcal{G} = (\mathcal{V}, \mathcal{E})$ with vertices $v \in \mathcal{V}$ corresponding to each area and edges $e \in \mathcal{E}$ between vertices $i$ and $j$ when $i \sim j$.
 
-Rewriting Equation \@ref(eq:gmrf), the probability density function of $\bu$ is
+Rewriting Equation \@ref(eq:gmrf), the probability density function of $\mathbf{u}$ is
 \begin{equation}
-    p(\bu)
-    \propto \exp \left( -\frac{\tau_u}{2} \bu^\top \bR \bu \right)
+    p(\mathbf{u})
+    \propto \exp \left( -\frac{\tau_u}{2} \mathbf{u}^\top \mathbf{R} \mathbf{u} \right)
     \propto \exp \left( -\frac{\tau_u}{2} \sum_{i \sim j} (u_i - u_j)^2 \right). \label{eq:pdfu}
 \end{equation}
-This density is a function of the pairwise differences $u_i - u_j$ and so is invariant to the addition of a constant $c$ to each entry $p(\bu) = p(\bu + c\mathbf{1})$, leading to an improper uniform distribution on the average of the $u_i$.
-If $\mathcal{G}$ is connected, in that by traversing the edges, any vertex can be reached from any other vertex, then there is only one impropriety in the model and $\text{rank}(\bR) = n - 1$, while if $\mathcal{G}$ is disconnected, and composed of $n_c \geq 2$ connected components with index sets $I_1, \ldots, I_{n_c}$, then the corresponding structure matrix $\bR$ has rank $n - n_c$ and the density is invariant to the addition of a constant to each of the connected components $p(\bu_{I}) = p(\bu_{I} + c\mathbf{1})$ where $I = I_1, \ldots, I_{n_c}$.
+This density is a function of the pairwise differences $u_i - u_j$ and so is invariant to the addition of a constant $c$ to each entry $p(\mathbf{u}) = p(\mathbf{u} + c\mathbf{1})$, leading to an improper uniform distribution on the average of the $u_i$.
+If $\mathcal{G}$ is connected, in that by traversing the edges, any vertex can be reached from any other vertex, then there is only one impropriety in the model and $\text{rank}(\mathbf{R}) = n - 1$, while if $\mathcal{G}$ is disconnected, and composed of $n_c \geq 2$ connected components with index sets $I_1, \ldots, I_{n_c}$, then the corresponding structure matrix $\mathbf{R}$ has rank $n - n_c$ and the density is invariant to the addition of a constant to each of the connected components $p(\mathbf{u}_{I}) = p(\mathbf{u}_{I} + c\mathbf{1})$ where $I = I_1, \ldots, I_{n_c}$.
 
 ### Best practises for the Besag model
 
@@ -75,7 +75,7 @@ If $\mathcal{G}$ is connected, in that by traversing the edges, any vertex can b
 equal to one, by replacing $\mathbf{R}$ with $\mathbf{R}^\star = \mathbf{R} / \sigma^2_{\text{GV}}(\mathbf{R})$.
 As the diagonal elements $R^-_{ii}$ correspond to marginal variances, the generalised variance gives a measure of the average marginal variance.
 However, this measure, introduced by @sorbye2014scaling, ignores off-diagonal entries and more broadly any measure of typical variance could be used.
-Scaling mitigates the influence of the adjacency graph on the variance of $\bu$.
+Scaling mitigates the influence of the adjacency graph on the variance of $\mathbf{u}$.
 Allowing the variance to be controlled by $\tau_u$ alone is important as it allows for consistent, interpretable prior selection.
 When the adjacency graph is disconnected it is not appropriate to scale the structure matrix $\mathbf{R}$ uniformly since for a given precision $\tau_u$, local smoothing operates on each connected component independently.
 As such, each connected component should be scaled independently to have generalised variance one giving $\mathbf{R}^\star_I = \mathbf{R}_I / \sigma^2_{\text{GV}}(\mathbf{R}_I)$ where $\mathbf{R}_I$ is the sub-matrix of the structure matrix corresponding to index set $I$.
@@ -87,21 +87,21 @@ In other words, for each $|I| > 1$ that $\sum_{i \in I} u_i = 0$.
 ### The reparameterised Besag-York-Mollié model
 
 Often, as well as spatial structure, there exists IID over-dispersion in the residuals and it is inappropriate to use purely spatially structured random effects in the model.
-The Besag-York-Mollié (BYM) model of @besag1991bayesian accounts for this in a natural way by decomposing the spatial random effect $\bu = \bv + \w$ into a sum of an unstructured IID component $\bv$ and a spatially structured Besag component $\w$, each of which with their own respective precision parameters $\tau_v$ and $\tau_w$.
+The Besag-York-Mollié (BYM) model of @besag1991bayesian accounts for this in a natural way by decomposing the spatial random effect $\mathbf{u} = \mathbf{v} + \mathbf{w}$ into a sum of an unstructured IID component $\mathbf{v}$ and a spatially structured Besag component $\mathbf{w}$, each of which with their own respective precision parameters $\tau_v$ and $\tau_w$.
 The resulting distribution is
 \begin{equation}
-    \bu \sim \N(0, \tau_v^{-1} \mathbf{I} + \tau_w^{-1} \mathbf{R}^{-}) \label{eq:bym}.
+    \mathbf{u} \sim \mathcal{N}(0, \tau_v^{-1} \mathbf{I} + \tau_w^{-1} \mathbf{R}^{-}) \label{eq:bym}.
 \end{equation}
-Including both $\bv$ and $\w$ is intended to enable the model to learn the relative extent of the unstructured and structured components via $\tau_v$ and $\tau_w$.
+Including both $\mathbf{v}$ and $\mathbf{w}$ is intended to enable the model to learn the relative extent of the unstructured and structured components via $\tau_v$ and $\tau_w$.
 However, in this specification scaling of the Besag precision matrix $\mathbf{Q}$ is not taken into account despite this issue being particularly pertinent when dealing with multiple sources of noise.
 In particular, placing a joint prior $(\tau_v, \tau_w) \sim p(\tau_v, \tau_w)$ which doesn't privilege either component is more easily accomplished if $\mathbf{Q}$ and $\mathbf{I}$ have the same scale.
-Additionally, supposing we have a prior belief that the over-dispersion is primarily IID and $\bv$ accounts for the majority of the dispersion, then it is not immediately obvious how to represent this belief using $p(\tau_v, \tau_w)$, without inadvertently altering the prior about the overall variation.
+Additionally, supposing we have a prior belief that the over-dispersion is primarily IID and $\mathbf{v}$ accounts for the majority of the dispersion, then it is not immediately obvious how to represent this belief using $p(\tau_v, \tau_w)$, without inadvertently altering the prior about the overall variation.
 This highlights identifiability issues of the parameters $(\tau_v, \tau_w)$ resulting from them not being orthogonal.
 Building on the models of @leroux2000estimation and @dean2001detecting which tackle this identifiability problem, but do not scale the spatially structured noise, @simpson2017penalising propose a reparameterisation $(\tau_v, \tau_w) \mapsto (\tau_u, \phi)$ of the BYM model known as the BYM2 model and given by
 \begin{align}
-\bu = \frac{1}{\tau_u} \left( \sqrt{1- \phi} \, \bv + \sqrt{\phi} \, \w^\star \right), \label{eq:bym2}
+\mathbf{u} = \frac{1}{\tau_u} \left( \sqrt{1- \phi} \, \mathbf{v} + \sqrt{\phi} \, \mathbf{w}^\star \right), \label{eq:bym2}
 \end{align}
-where $\tau_u$ is the marginal precision of $\bu$, $\phi \in [0, 1]$ gives the proportion of the marginal variance explained by each component, and $\w^\star$ is a scaled version of $\w$ with precision matrix given by the scaled structure matrix $\mathbf{R}^\star$.
+where $\tau_u$ is the marginal precision of $\mathbf{u}$, $\phi \in [0, 1]$ gives the proportion of the marginal variance explained by each component, and $\mathbf{w}^\star$ is a scaled version of $\mathbf{w}$ with precision matrix given by the scaled structure matrix $\mathbf{R}^\star$.
 When $\phi = 0$ the random effects are IID, and when $\phi = 1$ the random effects follow the Besag model.
 To borrow an analogy [@rue2020comment] the parameterisation $(\tau_v, \tau_w)$ is like having one hot water and one cold water tap, whereas the parameterisation $(\tau_u, \phi)$ is like a mixer tap where the amount of water and its temperature can be adjusted separately.
 
