--- a/docs/main.tex
+++ b/docs/main.tex
@@ -174,11 +174,11 @@
 \newcommand{\bv}{\mathbf{v}}
 \newcommand{\w}{\mathbf{w}}
 \newcommand{\x}{\mathbf{x}}
-\newcommand{\y}{\mathbf{y}}
+\newcommand{\y}{\boldsymbol{\mathbf{y}}}
 \newcommand{\z}{\mathbf{z}}
 \newcommand{\bb}{\mathbf{b}}
 \newcommand{\Hb}{\mathbf{H}}
-\newcommand{\bphi}{\bm{\phi}}
+\newcommand{\bphi}{\boldsymbol{\mathbf{\phi}}}
 \newcommand{\brho}{\bm{\rho}}
 \newcommand{\btheta}{\bm{\theta}}
 \newcommand{\bmeta}{\bm{\eta}}
@@ -343,6 +343,10 @@ Together, the contributions in this thesis help to guide precision HIV policy in
 \adjustmtc
 \markboth{Introduction}{}
 
+This thesis is about applied and methodological Bayesian statistics.
+It is applied and methodological in that I am concerned first with real world questions and second with the means to answer them.
+It is Bayesian in that I arrive at conclusions based on data using probability models.
+
 
 
 \begin{figure}
@@ -353,10 +357,6 @@ Together, the contributions in this thesis help to guide precision HIV policy in
 
 \caption{HIV/AIDS is the largest cause of DALYs for non-infacts (\textgreater1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used by the \textcite{ihme2019} vary depending on severity of the condition.}\label{fig:gbd}
 \end{figure}
-
-This thesis is about applied and methodological Bayesian statistics.
-It is applied and methodological in that I am concerned first with real world questions and second with the means to answer them.
-It is Bayesian in that I arrive at conclusions based on data using probability models.
 
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
 The \textcite{ihme2019} found HIV to be the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older (Figure \ref{fig:gbd}).
@@ -369,7 +369,7 @@ While diverse, spatio-temporal data have distinctive commonalities.
 I draw on modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
-Each project in this thesis, as well as the thesis itself, is accompanied by \(\textsc{R}\) code, hosted on GitHub.
+Each project in this thesis, as well as the thesis itself, is accompanied by R code, hosted on GitHub.
 
 \hypertarget{chapter-overview}{%
 \section{Chapter overview}\label{chapter-overview}}
@@ -424,15 +424,16 @@ If untreated, HIV develop into a more advanced stage known as acquired immunodef
 HIV primarily attacks a type of white blood cell vital for the function of the immune system.
 As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or \emph{Pneumocystis} pneumonias.
 
-The first AIDS cases were reported in Los Angeles in the early 1980s.
+The first AIDS cases were reported in Los Angeles in the early 1980s \autocite{gottlieb1981pneumocystis,barre1983isolation}.
 Since then, HIV has spread globally.
 Transmission occurs by exposure to specific bodily fluids of an infected person.
 The most common mode of transmission is via unprotected anal or vaginal sex, though transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
 Approximately 86 million people have become infected with HIV, and of those 40 million have died of AIDS-related causes.
 
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-Many groups have played pivotal roles in shaping the response, including local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
-The investment of \$100 billion by PEPFAR constitutes the ``largest commitment by a single nation to address a single disease in history'' \autocite{pepfar2022}.
+Groups that have played pivotal roles in shaping the response include local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
+The investment of \$100 billion by PEPFAR constituting the ``largest commitment by a single nation to address a single disease in history'' indicates the scale of the response \autocite{pepfar2022}.
+
 
 
 
@@ -442,12 +443,14 @@ The investment of \$100 billion by PEPFAR constitutes the ``largest commitment b
 
 }
 
-\caption{Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59\% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68\%. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. These two regions comprise sub-Saharan Africa.}\label{fig:overall-picture}
+\caption{Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59\% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68\% \autocite{unaids2023aidsinfo}.
+Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa.}\label{fig:overall-picture}
 \end{figure}
 
-This combined effort has made a substantial impact on the course of the epidemic.
+A substantial impact has been made on the course of the epidemic.
 The number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \ref{fig:overall-picture}).
-This success has been due to implementation of a range of HIV prevention and treatment options, the most significant of which I describe below.
+This progress comes due to implementation HIV prevention and treatment options.
+I descibe the most significant of these below.
 
 \begin{itemize}
 \tightlist
@@ -474,10 +477,10 @@ This success has been due to implementation of a range of HIV prevention and tre
   More costly than some other prevention options, they are primarily useful in high risk settings.
 \end{itemize}
 
-It is important that progress which has been made is sustained.
-There remains some distance to go in ending AIDS as a public health threat.
+Though progress had been made, there remains much more to do.
 In 2022 there were 1.3 million people newly infected with HIV and 630 thousand AIDS-related deaths, more than one every minute \autocite{unaids2022global}.
-A shortfall in HIV funding \autocite{economist2023triple}, disruption to HIV services caused by the COVID-19 pandemic, and increasingly difficult to meet targets.
+Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
+Meeting these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a shortfall in HIV funding \autocite{economist2023triple} requires renewed commitment.
 
 
 
@@ -487,11 +490,12 @@ A shortfall in HIV funding \autocite{economist2023triple}, disruption to HIV ser
 
 }
 
-\caption{Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from \texttt{aidsinfo.unaids.org}. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).}\label{fig:naomi-continent}
+\caption{Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from \textcite{unaids2023aidsinfo}. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).}\label{fig:naomi-continent}
 \end{figure}
 
 For available resources to have the greatest impact, it is important that HIV interventions are prioritised.
-The precision public health paradigm \autocite{khoury2016precision} extends the principles of precision medicine to public health, and aims to provide the right interventions to the right population, in the right place, at the right time.
+Under the precision public health paradigm, the right interventions should be provided to the right populations, in the right place, at the right time \autocite{khoury2016precision}.
+Some interventions might be orders of magnitude more impactful than others \autocite{ord2013moral}.
 
 Disease burden varies substantially across multiple spatial scales.
 In some countries, the epidemic is concentrated within small populations, and HIV prevalence is low.
@@ -504,14 +508,14 @@ For example, adult HIV prevalence at the district municipality level in South Af
 
 In all countries and contexts, some groups of people are at much higher risk than others.
 Groups of people at increased risk of HIV infection are known as key populations (KPs).
-Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP).
+Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) \autocite{stevens2022key}.
 KPs are often marginalised, and face legal and social issues.
 In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
-For example, adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection in SSA \autocite{risher2021age,monod2023growing}.
+For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection \autocite{risher2021age,monod2023growing}, but typically not considered a KP.
 
-\hypertarget{hiv-surveillance}{%
-\section{\texorpdfstring{HIV surveillance \label{sec:surveillance}}{HIV surveillance }}\label{hiv-surveillance}}
+\hypertarget{surveillance}{%
+\section{HIV surveillance}\label{surveillance}}
 
 HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV/AIDS.
 Surveillance can used to track epidemic indicators, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
@@ -534,8 +538,8 @@ Important indicators include:
   Estimates of ART coverage play a direct role in the provision and target setting for treatment services.
 \end{itemize}
 
-There are significant difficulties associated with obtaining reliable, timely, estimates of these indicators at an appropriate spatial resolution.
-Among them:
+Obtaining reliable, timely, estimates of these indicators at an appropriate spatial resolution is challenging.
+Among the most significant difficulties are:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -547,10 +551,12 @@ Among them:
   For example, in many countries the last household survey conducted is several years out of date.
 \item
   \textbf{Missing data}
-  Many KPs are difficult to reach, and do not appear on household survey sampling frames.
+  The sampling frame may not correspond to the target population.
+  For example, many KPs are difficult to reach, and may be ommited from sampling frames.
   Individuals included on the sampling frame may choose not to respond.
-  Mismatch of the sampling frame to the target population, sampling error, and non-response can all be characterised as issues of missing data.
-  Note that I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
+  All surveys are subject to sampling error, as only a subset of the target population are sampled.
+  Each of these issues can be characterised as being due to missing data.
+  I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
 \item
   \textbf{Survey biases}
   Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
@@ -558,12 +564,13 @@ Among them:
 \item
   \textbf{Denominators and demography}
   Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
-  Accurately estimating these denominators is itself a challenging task \autocite{tatem2017worldpop}.
+  Accurately estimating population denominators is itself a challenging task \autocite{tatem2017worldpop}.
   Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
 \item
   \textbf{Reliance on epidemiological parameters}
-  Indicators often rely on estimates of epidemiological parameters obtained from cohort studies.
-  Application of these parameters, which may not generalise to the setting of interest, is often coarse and without proper accounting for uncertainty.
+  Indicators rely on estimates of epidemiological parameters obtained from cohort studies.
+  These parameters may not generalise to the setting of interest.
+  Further, they are typically applied coarsely, and without proper accounting for uncertainty.
 \end{enumerate}
 
 The above challenges make direct interpretation of the data often misleading.
@@ -608,7 +615,7 @@ Aims for HIV response going forward, and the surveillance capabilities needed to
 \section{Bayesian statistics}\label{bayesian-statistics}}
 
 Bayesian statistics is a mathematical paradigm for learning from data.
-It is well suited for to the challenges posed by Section \ref{sec:surveillance} because it allows principled and flexible integration of data and scientific knowledge.
+It is well suited for to the challenges posed by Section \ref{surveillance} because it allows principled and flexible integration of data and scientific knowledge.
 In this section I provide brief overview.
 For a more complete introduction, I recommend \textcite{mcelreath2020statistical} or \textcite{gelman2013bayesian}.
 
@@ -616,18 +623,19 @@ For a more complete introduction, I recommend \textcite{mcelreath2020statistical
 \subsection{Bayesian modelling}\label{bayesian-modelling}}
 
 At its best, the Bayesian paradigm allows the analyst focus on how best to model the data.
-This is achieved by the construction of a generative model \(p(\y, \bphi)\) for the observed data \(\y = (y_1, \ldots, y_n)\) together with parameters \(\bphi = (\phi_1, \ldots, \phi_d)\), where \(n\) is the dimension of the data and \(d\) is the number of parameters.
+This is achieved by the construction of a generative model \(p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})\) for the observed data \(\mathbf{y} = (y_1, \ldots, y_n)\) together with parameters \(\boldsymbol{\mathbf{\phi}} = (\phi_1, \ldots, \phi_d)\).
+Here \(n\) is the dimension of the data and \(d\) is the number of parameters.
 The model is generative in the sense that one can simulate from it to generate draws
 \begin{equation}
-(\y, \bphi) \sim p(\y, \bphi)
+(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \sim p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})
 \end{equation}
 If these draws differ too greatly from what the analyst would expect, then the generative model does not capture their scientific understanding, and can be refined.
 In this way, models can be built iteratively, with complexity added gradually.
 
-The model is usually constructed from two parts, known respectively as the likelihood \(p(\y \, | \, \bphi)\) and the prior distribution \(p(\bphi)\).
-The joint distribution is obtained by the product \(p(\y, \bphi) = p(\y \, | \, \bphi) p(\bphi)\).
-The likelihood, as a function of \(\bphi\) with \(\y\) fixed, reflects the probability of observing the data when the true value of the parameters is \(\bphi\).
-The prior distribution encapsulates beliefs about the parameters \(\bphi\) before the data is observed.
+The model is usually constructed from two parts, known respectively as the likelihood \(p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})\) and the prior distribution \(p(\boldsymbol{\mathbf{\phi}})\).
+The joint distribution is obtained by the product \(p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) = p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})\).
+The likelihood, as a function of \(\boldsymbol{\mathbf{\phi}}\) with \(\mathbf{y}\) fixed, reflects the probability of observing the data when the true value of the parameters is \(\boldsymbol{\mathbf{\phi}}\).
+The prior distribution encapsulates beliefs about the parameters \(\boldsymbol{\mathbf{\phi}}\) before the data is observed.
 
 Recommendations for specifying the prior distribution vary.
 A central issue is the extent to which subjective information should be incorporated into the prior distribution, and thereby influence the posterior distribution.
@@ -640,30 +648,22 @@ As such, it may be argued that issues of subjectivity are not unique to the prio
 
 
 
-
-
-
-
 \begin{figure}
 
 {\centering \includegraphics[width=0.95\linewidth]{figures/bayesian/conjugate} 
 
 }
 
-\caption{An example of Bayesian modelling and computation for a simple one parameter model.
-The likelihood is \(y_i \sim \text{Poisson}(\phi)\) for \(i = 1, 2, 3\) and prior distribution is \(\phi \sim \text{Gamma}(3, 1)\).
-Given observed data \(\y = (1, 2, 3)\) the posterior distribution is available in closed form as \(\text{Gamma}(9, 4)\).
-This is because the model is conjugate and the posterior distribution is in the same family as the prior distribution.
-Conjugate models are frequently used because of their convenience, in preference to other perhaps more appropriate models which might be more computationally demanding.}\label{fig:conjugate}
+\caption{An example of Bayesian modelling and computation for a simple one parameter model. The likelihood is \(y_i \sim \text{Poisson}(\phi)\) for \(i = 1, 2, 3\) and prior distribution is \(\phi \sim \text{Gamma}(3, 1)\). Given observed data \(\mathbf{y} = (1, 2, 3)\) the posterior distribution is available in closed form as \(\text{Gamma}(9, 4)\). This is because the model is conjugate and the posterior distribution is in the same family as the prior distribution. Conjugate models are frequently used because of their convenience, in preference to other perhaps more appropriate models which might be more computationally demanding.}\label{fig:conjugate}
 \end{figure}
 
-The posterior distribution \(p(\bphi \, | \, \y)\) encapsulates probabilistic beliefs about the parameters given the observed data.
+The posterior distribution \(p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y})\) encapsulates probabilistic beliefs about the parameters given the observed data.
 Using the eponymous Bayes' theorem, it is given by
 \begin{equation}
-p(\bphi \, | \, \y) = \frac{p(\y \, | \, \bphi) p(\bphi)}{p(\y)}. \label{eq:posterior}
+p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) = \frac{p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})}{p(\mathbf{y})}. \label{eq:posterior}
 \end{equation}
-Unfortunately, it is usually intractable to calculate Equation \eqref{eq:posterior} directly because of the potentially high-dimensional integral \(p(\y) = \int p(\y, \bphi) \text{d}\bphi\) in the denominator, sometimes known as the marginal likelihood or evidence.
-As such, although it is easy to evaluate \(p(\bphi \, | \, \y) \propto p(\y \, | \, \bphi) p(\bphi)\), it is typically difficult to evaluate the posterior distribution itself.
+Unfortunately, it is usually intractable to calculate Equation \eqref{eq:posterior} directly because of the potentially high-dimensional integral \(p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymbol{\mathbf{\phi}}\) in the denominator, sometimes known as the marginal likelihood or evidence.
+As such, although it is easy to evaluate \(p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})\), it is typically difficult to evaluate the posterior distribution itself.
 
 A variety of computational methods have been developed to tackle this problem.
 The main categories are:
@@ -674,8 +674,7 @@ The main categories are:
 \item
   \textbf{Sampling algorithms} These approaches look to generate samples from the posterior distribution, and are known as Monte Carlo methods, named after the casino \autocite{robert2005monte}.
   The most popular is Markov chain Monte Carlo (MCMC), which proceeds by simulating from a Markov chain with the posterior distribution as its stationary distribution.
-  In this thesis, I use of the No-U-Turn sampler {[}NUTS; \textcite{hoffman2014no}{]}, a Hamiltonian Monte Carlo {[}HMC; \textcite{duane1987hybrid}; \textcite{neal2011mcmc}{]} algorithm, implemented in the Stan \autocite{carpenter2017stan} probabilistic programming language (PPL).
-  Other approaches include importance sampling and sequential Monte Carlo.
+  In this thesis, I make use of the No-U-Turn sampler {[}NUTS; \textcite{hoffman2014no}{]}, a Hamiltonian Monte Carlo {[}HMC; \textcite{duane1987hybrid}; \textcite{neal2011mcmc}{]} algorithm, implemented in the Stan \autocite{carpenter2017stan} probabilistic programming language (PPL).
 \item
   \textbf{Variational inference} In variational inference (VI), the posterior distribution is assumed to belong to a particular class of functions.
   Optimisation algorithms are then used to choose the best member of that class.
@@ -729,15 +728,15 @@ This law extends not only to space but also time.
 
 Often it is natural to group some observations together.
 Bayesian hierarchical or multilevel models, comprised of multiple stages, allow for natural handling data of this sort, even with complex nested or crossed grouping structures.
-In a three-stage hierarchical model, we partition the parameters so that \(\bphi = (\x, \btheta)\).
-I refer to \(\x = (x_1, \ldots, x_n)\) as the latent field, and \(\btheta = (\theta_1, \ldots, \theta_m)\) as the hyperparameters.
-The generative model for data \(\y\) is then
+In a three-stage hierarchical model, we partition the parameters so that \(\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})\).
+I refer to \(\mathbf{x} = (x_1, \ldots, x_n)\) as the latent field, and \(\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_m)\) as the hyperparameters.
+The generative model for data \(\mathbf{y}\) is then
 \begin{align}
-\y &\sim p(\y \, | \, \x, \btheta), \\
-\x &\sim p(\x \, | \, \btheta), \\
-\btheta &\sim p(\btheta),
+\mathbf{y} &\sim p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}), \\
+\mathbf{x} &\sim p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}), \\
+\boldsymbol{\mathbf{\theta}} &\sim p(\boldsymbol{\mathbf{\theta}}),
 \end{align}
-with posterior distribution proportional to \(p(\x, \btheta \, | \, \y) \propto p(\y \, | \, \x, \btheta) p(\x \, | \, \btheta) p(\btheta)\).
+with posterior distribution proportional to \(p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}})\).
 
 For example, Figure \ref{fig:hierarchical-structure} illustrates a case where each individual \(i = 1, \ldots, n\) in a study is observed \(m_i\) times.
 Observations of the same individual \(y_{i1}, \ldots y_{im_i}\) are grouped together, and likely to have more similar properties than observations in different groups.
@@ -777,7 +776,7 @@ Random effects refer to those elements of the latent field which vary across gro
 These terms have notoriously many different and incompatible definitions which can cause confusion \autocite{gelman2005analysis}.
 I nonetheless find them useful to introduce here.
 
-For concreteness, in the partial pooling model above, the latent field is \(\x = (\beta, u_1, \ldots, u_n)\).
+For concreteness, in the partial pooling model above, the latent field is \(\mathbf{x} = (\beta, u_1, \ldots, u_n)\).
 The scalar \(\beta\) is a fixed effect which applies to all \(n\) groups.
 The vector \(\bu\) are random effects which alter the mean differently for each group.
 The only hyperparameter is the standard deviation \(\theta = \sigma\).
@@ -792,16 +791,16 @@ Spatial random effects are the subject of Chapter \ref{beyond-borders}.
 Latent Gaussian models {[}LGMs; \textcite{rue2009approximate}{]} are a class of three-stage Bayesian hierarchical models in which the middle layer is Gaussian.
 To be more precise, in an LGM, the likelihood is given by
 \begin{align*}
-y_i &\sim p(y_i \, | \, \eta_i, \btheta_1), \quad i = 1, \ldots, n, \\
+y_i &\sim p(y_i \, | \, \eta_i, \boldsymbol{\mathbf{\theta}}_1), \quad i = 1, \ldots, n, \\
 \mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i), \\
 \eta_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} f_k(u_{ki}).
 \end{align*}
-The likelihood is given by a product \(p(\y \, | \, \bmeta, \btheta_1) = \prod_{i = 1}^n p(y_i \, | \, \eta_i, \btheta_1)\), where \(\bmeta = (\eta_1, \ldots, \eta_n)\).
+The likelihood is given by a product \(p(\mathbf{y} \, | \, \bmeta, \boldsymbol{\mathbf{\theta}}_1) = \prod_{i = 1}^n p(y_i \, | \, \eta_i, \boldsymbol{\mathbf{\theta}}_1)\), where \(\bmeta = (\eta_1, \ldots, \eta_n)\).
 Each response has conditional mean \(\mu_i\) with inverse link function \(g: \mathbb{R} \to \mathbb{R}\) such that \(\mu_i = g(\eta_i)\).
-The vector \(\btheta_1 \in \mathbb{R}^{s_1}\), with \(s_1\) assumed small, are additional parameters of the likelihood.
+The vector \(\boldsymbol{\mathbf{\theta}}_1 \in \mathbb{R}^{s_1}\), with \(s_1\) assumed small, are additional parameters of the likelihood.
 The structured additive predictor \(\eta_i\) may include an intercept \(\beta_0\), fixed effects \(\beta_j\) of the covariates \(z_{ji}\), and random effects \(f_k(\cdot)\) of the covariates \(u_{ki}\).
-The parameters \(\beta_0\), \(\{\beta_j\}\), \(\{f_k(\cdot)\}\) are each assigned Gaussian prior distributions, and can be collected into a vector \(\x \in \mathbb{R}^N\) such that \(\x \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\btheta_2)^{-1})\) where \(\btheta_2 \in \mathbb{R}^{s_2}\) are further hyperparameters, again with \(s_2\) assumed small.
-Let \(\btheta = (\btheta_1, \btheta_2) \in \mathbb{R}^m\) with \(m = s_1 + s_2\) be all hyperparameters, with prior distribution \(p(\btheta)\).
+The parameters \(\beta_0\), \(\{\beta_j\}\), \(\{f_k(\cdot)\}\) are each assigned Gaussian prior distributions, and can be collected into a vector \(\mathbf{x} \in \mathbb{R}^N\) such that \(\mathbf{x} \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\boldsymbol{\mathbf{\theta}}_2)^{-1})\) where \(\boldsymbol{\mathbf{\theta}}_2 \in \mathbb{R}^{s_2}\) are further hyperparameters, again with \(s_2\) assumed small.
+Let \(\boldsymbol{\mathbf{\theta}} = (\boldsymbol{\mathbf{\theta}}_1, \boldsymbol{\mathbf{\theta}}_2) \in \mathbb{R}^m\) with \(m = s_1 + s_2\) be all hyperparameters, with prior distribution \(p(\boldsymbol{\mathbf{\theta}})\).
 
 \hypertarget{extended-latent-gaussian-models}{%
 \subsection{Extended latent Gaussian models}\label{extended-latent-gaussian-models}}
@@ -812,7 +811,7 @@ Each mean response \(\mu_i\) now depends on some subset \(\mathcal{J}_i \subsete
 The inverse link function \(g(\cdot)\) is redefined for each observation to be a possibly many-to-one mapping \(g_i: \mathbb{R}^{|\mathcal{J}_i|} \to \mathbb{R}\), such that \(\mu_i = g_i(\bmeta_{\mathcal{J}_i})\).
 Put together, ELGMs are of the form
 \begin{align*}
-y_i &\sim p(y_i \, | \, \bmeta_{\mathcal{J}_i}, \btheta_1), \quad i = 1, \ldots, n, \\
+y_i &\sim p(y_i \, | \, \bmeta_{\mathcal{J}_i}, \boldsymbol{\mathbf{\theta}}_1), \quad i = 1, \ldots, n, \\
 \mu_i &= \mathbb{E}(y_i \, | \, \bmeta_{\mathcal{J}_i}) = g_i(\bmeta_{\mathcal{J}_i}), \\
 \eta_j &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} f_k(u_{ki}), \quad j = 1, \ldots, N_n,
 \end{align*}
